Fixed the stretching bug, got rid of extra spacing, and scaled map down

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -1,14 +1,7 @@
-element.style
-{
-position: absolute;
-  width: 100%;
-  height: 200px;
-
-}
 
 .App {
-  /*text-align: center;*/
-  margin: 10px;
+
+
 }
 
 .App-title {
@@ -26,19 +19,24 @@ position: absolute;
 }
 
 .App-button {
-  width: 300px;
-  margin:0 auto;
-  display: block;
+
+width: 200px;
+  float: right;
+  margin: 0px;
+  padding: 0px;
   text-align: center;
   position: relative;
-  left: 266px;
-  top: 4px;
-  font-family: "Bookman Old Style"
+  font-family: "Bookman Old Style";
+  display: flex;
+  flex-direction: column;
+  right: 50px;
 }
 
 .grad-button {
   position: relative;
-  left: 260px;
+  right: 50px;
+
+
 }
 
 .App-header {
@@ -92,18 +90,23 @@ position: absolute;
 }
 
 .container {
+
+  display: flex;
+  flex-direction: column;
   position: relative;
-  float: right;
-  right: 175px;
   text-align: center;
-  top: 20px;
-  width: 350px;
-  height: 300px;
+  float: right;
+  max-height: 100%;
+  max-width: 270px;
+  align-items: right;
   border: 3px solid black;
  background-color: darkred;
   opacity: .7;
   color: white;
   margin: 0;
   padding: 0;
+  top: 250px;
+  left: 140px;
 
 }
+
